Added twitter feed

--- a/src/app/twitterfeed/twitterfeed.html
+++ b/src/app/twitterfeed/twitterfeed.html
@@ -1,3 +1,4 @@
-<div class="container">
-twitterfeed
+<div class="container" style="text-align:center">
+    <a data-chrome="nofooter noscrollbar" class="twitter-timeline" href="https://twitter.com/hashtag/RiseManchester" data-widget-id="657931923281571840">#RiseManchester Tweets</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
