--- a/src/app/lunchfeed/lunchfeed.html
+++ b/src/app/lunchfeed/lunchfeed.html
@@ -1,65 +1,36 @@
 <div class="container" ng-controller="LunchFeedController">
-    <div class="col-xs-9" style="border: 1px solid; padding-left:30px;height:900px;">
+    <div class="col-xs-9" style="border: 1px solid; height:600px;">
         <h2>Todays Menu</h2>
         <div class="row" style="border: 1px solid;">
             <div class="col-xs-6" style="border: 1px solid;">
-                item1
+                Burger
+                <img src="http://thefoodden.co.nz/wp-content/uploads/2014/08/Food-Lineup-burger-bar1.png">
             </div>
             <div class="col-xs-6" style="border: 1px solid;">
-                item2
+                Soup
+                <img src="http://3.imimg.com/data3/FL/MY/MY-4571823/garlic-vegetable-soup-250x250.png">
             </div>
             <div class="col-xs-6" style="border: 1px solid;">
-                item3
+                Tacos
+                <img src="http://intrinsicalgorithm.com/IAonAI/wp-content/uploads/2012/11/6a00d8341c5e0053ef016302a5b7f5970d-800wi.png">
             </div>
             <div class="col-xs-6" style="border: 1px solid;">
-                item4
+                Quiche
+                <img src="http://amourdequiches.com/wp-content/uploads/quiche-fransoise-250x250.png">
             </div>
         </div>
+        <h2>Lunch Room Capacity</h2>
         <div class="row" style="border: 1px solid;">
             <progressbar value="value" type="{{type}}" max="max" title="asdsa" />
         </div>
     </div>
-    <div class="col-xs-3" style="border: 1px solid; height:900px;">
+    <div class="col-xs-3" style="border: 1px solid; height:600px;">
         <h2>Lunch Feed</h2>
         <table>
-            <tr data-ng-repeat="name in names">
+            <tr data-ng-repeat="name in names" style="border: 1px solid;">
               <td>{{ name }} just checked into the lunch room</td>
               <td>12:00</td>
             </tr>
         </table>
     </div>
-    <!--
-    <div class="row">
-        <h2>Lunch Feed</h2>
-        <table>
-            <tr data-ng-repeat="name in names">
-              <td>{{ name }}</td>
-              <td>just checked into the lunch room</td>
-              <td>12:00</td>
-            </tr>
-        </table>
-    </div>
-    <div class="row">
-        <h2>Todays Menu</h2>
-        <div class="col-xs-12 col-sm-4" style="border: 1px solid">1
-            <img src="http://www.gfood.co.za/wp-content/uploads/2014/04/fruit_juice.jpg" width="100%">
-        </div>
-        <div class="col-xs-12 col-sm-4">2
-        </div>
-        <div class="col-xs-12 col-sm-4">3
-        </div>
-
-        <div class="row">
-            <ul>
-                <li>Soup: £1.20</li>
-                <li>Chicken: £2.90</li>
-                <li>Burrito: £2.50</li>
-            </ul>
-        </div>
-    </div>
-    <div class="row">
-        <h2>Lunch Room Capacity</h2>
-            <progressbar value="value" type="{{type}}" max="max" title="asdsa" />
-    </div>
--->
 </div>
