--- a/src/app/index.less
+++ b/src/app/index.less
@@ -11,6 +11,8 @@
  */
 @navbar-inverse-link-color: #5AADBB;
 @title-text-colour: #1540B2;
+@rise-blue: #1ecfcc;
+@rise-grey: #858688;
 @icon-font-path: '../../bower_components/bootstrap/fonts/';
 
 .browsehappy {
