--- a/src/app/index.less
+++ b/src/app/index.less
@@ -30,6 +30,13 @@
   }
 }
 
+.carousel{
+  &.footer{
+    height: 52px;
+    background-color: @rise-grey;
+  }
+}
+
 .lunchfeed {
     &.image{
         width: 200px;
