footer for carousel

--- a/src/app/carousel/carousel.html
+++ b/src/app/carousel/carousel.html
@@ -1,4 +1,4 @@
-<slick dots="false" autoplay="true" autoplay-speed="2000" adaptiveHeight="true" infinite="true" speed=300 slides-to-show=1 touch-move="false" slides-to-scroll=1 class="slider one-time">
+<slick class="carousel main" dots="false" autoplay="true" autoplay-speed="2000" infinite="true" speed=300 slides-to-show=1 touch-move="false" slides-to-scroll=1 class="slider one-time">
       <div ng-include src="'app/leaderboard/leaderboard.html'" ng-controller="LeaderboardController"></div>
       <div ng-include src="'app/lunchfeed/lunchfeed.html'" ng-controller="LunchFeedController"></div>
 </slick>
