--- a/src/app/index.less
+++ b/src/app/index.less
@@ -31,8 +31,11 @@
 }
 
 .carousel{
+  &.main{
+    height: 83%;
+  }
   &.footer{
-    height: 52px;
+    height: 17%;
     background-color: @rise-grey;
   }
 }
