--- a/src/app/index.less
+++ b/src/app/index.less
@@ -40,6 +40,30 @@
   }
 }
 
+.twitterfeed {
+    &.background{
+        background-image: url("http://localhost:3000/assets/images/128-59.jpg");
+        background-repeat: repeat;
+        height: 100%;
+        padding-top:10px;
+    }
+    &.tweetbox{
+        text-align:center;
+        padding-top: 10px;
+    }
+    &.welcome{
+        width:520px;
+        height: 40px;
+        background-color: white;
+        text-color: blue;
+        text-align: center;
+        display: block;
+        margin: 0 auto;
+        border-radius: 5px;
+        padding-top:10px;
+        font-weight: bold;
+    }
+}
 .lunchfeed {
     &.image{
         width: 200px;
