lunch feed styles

--- a/src/app/lunchfeed/lunchfeed.html
+++ b/src/app/lunchfeed/lunchfeed.html
@@ -14,9 +14,9 @@
                 <div class="lunchfeed price">Price £2.00</div>
             </div>
         </div>
-        <h2 class="lunchfeed capacity title" style="padding-top:70px;">Lunch Room Capacity</h2>
+        <h2 class="lunchfeed capacity title" style="padding-top:50px;">Lunch Room Capacity</h2>
         <div class="row" class="lunchfeed capacity">
-            <progressbar value="value" type="{{type}}" max="max" title="asdsa">{{value}}/{{max}} Seats Occupied</progressbar>
+            <progressbar style="height:50px" value="value" type="{{type}}" max="max" title="asdsa"><span class="lunchfeed info"><i class="fa fa-user"></i> {{value}}/{{max}} Seats Occupied<span></progressbar>
         </div>
     </div>
     <div class="col-xs-4 lunchfeed feed">
