--- a/src/app/index.less
+++ b/src/app/index.less
@@ -74,6 +74,10 @@
         font-style: bold;
         font-family: tangerine, sans-serif;
     }
+    &.info{
+      font-size: 20px;
+      line-height: 50px; /*set line height back to normal*/
+    }
 }
 
 /**
