--- a/src/app/index.less
+++ b/src/app/index.less
@@ -32,10 +32,10 @@
 
 .carousel{
   &.main{
-    height: 83%;
+    height: 87%;
   }
   &.footer{
-    height: 17%;
+    height: 13%;
     background-color: @rise-grey;
   }
 }
@@ -65,6 +65,12 @@
     }
 }
 .lunchfeed {
+    &.itembox{
+        background-color:antiqueWhite; background:rgba(250,235,215,0.48);
+        border-radius: 5px;
+        border-left: thick double #ffffff;
+        padding-bottom:20px;
+    }
     &.image{
         width: 200px;
         height: 200px;
