--- a/src/app/leaderboard/leaderboard.html
+++ b/src/app/leaderboard/leaderboard.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="leaderboard background">
     <!-- Workspaces containers -->
     <div class="workspaceContainer" ng-repeat="wk in workspaces" ng-show="currentWorkspace==wk">
         <table data-options="wk.tableOptions" bs-table-control> </table>
