--- a/src/app/lunchfeed/lunchfeed.html
+++ b/src/app/lunchfeed/lunchfeed.html
@@ -3,12 +3,12 @@
     <div class="col-xs-8">
         <h2 class="lunchfeed title">Today's Menu</h2>
         <div class="lunchfeed row">
-            <div class="col-xs-6">
+            <div class="col-xs-6 lunchfeed itembox">
                 <div class="lunchfeed menuitem">Burger</div>
                 <img class="lunchfeed image" src="http://thefoodden.co.nz/wp-content/uploads/2014/08/Food-Lineup-burger-bar1.png">
                 <div class="lunchfeed price">Price £3.80</div>
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-6 lunchfeed itembox">
                 <div class="lunchfeed menuitem">Lentil Soup</div>
                 <img class="lunchfeed image" src="http://3.imimg.com/data3/FL/MY/MY-4571823/garlic-vegetable-soup-250x250.png">
                 <div class="lunchfeed price">Price £2.00</div>
