--- a/src/app/lunchfeed/lunchfeed.html
+++ b/src/app/lunchfeed/lunchfeed.html
@@ -6,15 +6,19 @@
             <div class="col-xs-6 lunchfeed itembox">
                 <div class="lunchfeed menuitem">Burger</div>
                 <img class="lunchfeed image" src="http://thefoodden.co.nz/wp-content/uploads/2014/08/Food-Lineup-burger-bar1.png">
-                <div class="lunchfeed price">Price £3.80</div>
+                <div style="text-align: center">
+                    <button type="button" class="btn btn-success">£3.80</button>
+                </div>
             </div>
             <div class="col-xs-6 lunchfeed itembox">
                 <div class="lunchfeed menuitem">Lentil Soup</div>
                 <img class="lunchfeed image" src="http://3.imimg.com/data3/FL/MY/MY-4571823/garlic-vegetable-soup-250x250.png">
-                <div class="lunchfeed price">Price £2.00</div>
+                <div style="text-align: center">
+                    <button type="button" class="btn btn-success">£2.00</button>
+                </div>
             </div>
         </div>
-        <h2 class="lunchfeed capacity title" style="padding-top:35px;">Lunch Room Capacity</h2>
+        <h2 class="lunchfeed capacity title" style="padding-top:25px;">Lunch Room Capacity</h2>
         <div class="row" class="lunchfeed capacity">
             <progressbar style="height:50px" value="value" type="{{type}}" max="max" title="asdsa"><span class="lunchfeed info"><i class="fa fa-user"></i> {{value}}/{{max}} Seats Occupied<span></progressbar>
         </div>
