--- a/src/app/index.less
+++ b/src/app/index.less
@@ -14,6 +14,8 @@
 @rise-blue: #1ecfcc;
 @rise-grey: #858688;
 @icon-font-path: '../../bower_components/bootstrap/fonts/';
+@first-row-color: rgb(232, 81, 93);
+@second-row-color: rgb(63, 62, 105);
 
 .browsehappy {
   margin: 0.2em 0;
