--- a/src/app/leaderboard/leaderboard.html
+++ b/src/app/leaderboard/leaderboard.html
@@ -1,6 +1,6 @@
 <div class="leaderboard background">
     <!-- Workspaces containers -->
     <div class="workspaceContainer" ng-repeat="wk in workspaces" ng-show="currentWorkspace==wk">
-        <table data-options="wk.tableOptions" bs-table-control> </table>
+        <table class="pure-table pure-table-striped" data-options="wk.tableOptions" bs-table-control> </table>
     </div>
 </div>
