--- a/src/app/index.less
+++ b/src/app/index.less
@@ -121,6 +121,12 @@
         padding-bottom: 90px;
         margin-top:15px;
     }
+    &.background{
+        background-image: url("http://localhost:3000/assets/images/128-136.jpg");
+        background-repeat: repeat;
+        height: 100%;
+        padding-top:10px;
+    }
 }
 
 .leaderboard {
