--- a/src/app/barchart/barchart.html
+++ b/src/app/barchart/barchart.html
@@ -1,4 +1,4 @@
-<div class="leaderboard background">
+<div class="barchart background">
     <div class="container">
         <div class="leaderboard title">
             Biggest Caffeine Addicts
