--- a/src/app/barchart/barchart.html
+++ b/src/app/barchart/barchart.html
@@ -5,7 +5,7 @@
         </div>
 
         <div class="barchart barcontainer">
-            <canvas style="padding-top:30px;" id="bar" class="chart chart-bar"
+            <canvas style="padding-top:30px;" height="100px" id="bar" class="chart chart-bar"
                   chart-data="data" chart-labels="labels">
             </canvas>
         </div>
