--- a/src/app/barchart/barchart.html
+++ b/src/app/barchart/barchart.html
@@ -1,7 +1,7 @@
 <div class="barchart background">
     <div class="container">
         <div class="leaderboard title">
-            Biggest Caffeine Addicts
+            <i class="fa fa-coffee"></i> Biggest Caffeine Addicts <i class="fa fa-coffee"></i>
         </div>
 
         <div class="barchart barcontainer">
