--- a/src/app/leaderboard/leaderboard.html
+++ b/src/app/leaderboard/leaderboard.html
@@ -1,7 +1,7 @@
 <div class="leaderboard background">
     <div class="container">
         <div class="leaderboard title">
-            Top Performing Teams
+            <i class="fa fa-trophy"></i> Hard Working Teams <i class="fa fa-trophy"></i>
         </div>
         <div class="workspaceContainer" style="padding-top:20px" ng-repeat="wk in workspaces" ng-show="currentWorkspace==wk">
             <table class="pure-table pure-table-striped" data-options="wk.tableOptions" bs-table-control> </table>
