--- a/src/app/barchart/barchart.html
+++ b/src/app/barchart/barchart.html
@@ -6,7 +6,7 @@
 
         <div class="barchart barcontainer">
             <canvas style="padding-top:30px;" height="100px" id="bar" class="chart chart-bar"
-                  chart-data="data" chart-labels="labels">
+                  chart-data="data" chart-labels="names">
             </canvas>
         </div>
     </div>
