--- a/src/app/lunchfeed/lunchfeed.html
+++ b/src/app/lunchfeed/lunchfeed.html
@@ -20,13 +20,13 @@
         </div>
         <h2 class="lunchfeed capacity title" style="padding-top:25px;">Lunch Room Capacity</h2>
         <div class="row" class="lunchfeed capacity">
-            <progressbar style="height:50px" value="value" type="{{type}}" max="max" title="asdsa"><span class="lunchfeed info"><i class="fa fa-user"></i> {{value}}/{{max}} Seats Occupied<span></progressbar>
+            <progressbar style="height:50px" value="value" type="type" max="max" title="asdsa"><span class="lunchfeed info"><i class="fa fa-user"></i> {{value}}/{{max}} Seats Occupied<span></progressbar>
         </div>
     </div>
     <div class="col-xs-4 lunchfeed feed">
         <h2 class="lunchfeed title">Lunch Feed</h2>
         <table class="lunchfeed table">
-            <tr data-ng-repeat="person in people">
+            <tr data-ng-repeat="person in peoples">
               <td>{{ person.name }} checked into the lunch room {{person.time}}.</td>
             </tr>
         </table>
